--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jest": "^29.7.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^3.2.5"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ]
 }
